attempting to fix mobile canvas overflow

--- a/styles/scss/homePage/_carousel.module.scss
+++ b/styles/scss/homePage/_carousel.module.scss
@@ -20,15 +20,15 @@
     right: 0;
     max-width: 100%;
 
-    @media screen and (max-width:$s){
-        height: 100vh;
-        width: 100vw;
-        position: fixed;
-        padding: 0;
-        margin: 0;
-        top: 0%;
-        left: 0;
-    }
+    // @media screen and (max-width:$s){
+    //     height: 100vh;
+    //     width: 100vw;
+    //     position: fixed;
+    //     padding: 0;
+    //     margin: 0;
+    //     top: 0%;
+    //     left: 0;
+    // }
 }
 .titles{
     display: flex;
